<resources>
    <string name="app_name">RegApp</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <!--Registration input fields-->
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="country">Country</string>
    <string name="submit">Submit</string>

    <!--Register new event-->
    <string name="title">Event Name</string>
    <string name="note">Details</string>
    <string name="save">Save</string>

    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_location">Map</string>
    <string name="title_activity_register">Register</string>

    <!--Maps-->
    <string name="google_maps_key">Key</string>

</resources>
